# backend/internal/models/players.go
@@ -20,3 +20,7 @@ type UpdatePlayerRequest struct {
 	ID   uuid.UUID `json:"id" example:"123e4567-e89b-12d3-a456-426614174000"`
 	Name string    `json:"name" example:"John"`
 }
+
+type DeletePlayerRequest struct {
+	ID uuid.UUID `json:"id" example:"123e4567-e89b-12d3-a456-426614174000"`
+}
